--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body
     color: white;
     /* color: #a5aab3; */
     background-color: #030712;
+    user-select: none;
 }
 
 /* h1, h2, h3
@@ -100,9 +101,13 @@ main
 {
     display: flex;
     flex-direction: column;
+    row-gap: 1rem;
+}
+
+.flex-center
+{
     justify-content: center;
     align-items: center;
-    row-gap: 1rem;
 }
 
 .flex-container.home-content-container
@@ -184,12 +189,12 @@ section:first-of-type
     margin-top: 10rem;
 }
 
-section h2
+section > h2
 {
     margin-top: 3rem;
 }
 
-section h3
+section > h3
 {
     margin: 3rem 0;
 }
@@ -268,12 +273,12 @@ section#about #my-pic
     row-gap: 3rem;
 }
 
-#skills h2
+#skills > h2
 {
     margin-bottom: 2rem;
 }
 
-#skills h3
+#skills > h3
 {
     margin-bottom: 5rem;
 }
@@ -360,7 +365,12 @@ section#testimonial
 .projects-container
 {
     width: 85%;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
+}
+
+.projects-container:last-of-type
+{
+    margin-bottom: 0;
 }
 
 .project-preview-container
@@ -385,6 +395,11 @@ section#testimonial
     padding: 4rem;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
+}
+
+.project-details-container > h3
+{
+    font-style: italic;
 }
 
 .project-tech-stack-container
@@ -431,6 +446,64 @@ section#testimonial
 .external-link-image:hover
 {
     scale: 1.2;
+}
+
+section#contact > div:first-of-type, section#contact > div:nth-of-type(2)
+{
+    column-gap: 1rem;
+}
+
+section#contact > div:first-of-type > i
+{
+    scale: 1.7;
+}
+
+section#contact > p:nth-of-type(2)
+{
+    margin-bottom: 3rem;
+}
+
+section#contact > h2
+{
+    margin-bottom: 4rem;
+}
+
+section#contact
+{
+    margin-bottom: 1rem;
+}
+
+.social-handles-icons
+{
+    width: 2rem;
+}
+
+.social-handles-icons.circled
+{
+    clip-path: circle();
+}
+
+.copy-btn
+{
+    cursor: pointer;
+    padding: 0.3rem;
+    border-radius: 3px;
+}
+
+.copy-btn:hover
+{
+    background-color:#1f2937;
+}
+
+footer
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 0.5rem;
+    background-color: #111827;
+    height: 4rem;
+    font-size: 0.9rem;
 }
 
 @media screen and (max-width: 1200px)
